@@ -1,3 +1,5 @@
+- vips_compass() needs docs
+
 - cpp bandjoin should use bandjoin_const() where possibel ... currently 
   uses new_from_image
 
