@@ -92,7 +92,9 @@ vips_countlines_build( VipsObject *object )
 	case VIPS_DIRECTION_HORIZONTAL:
 		if( !(t[0] = vips_image_new_matrixv( 1, 2, -1.0, 1.0 )) ||
 			vips_moreeq_const1( in, &t[1], 128, NULL ) ||
-			vips_conv( t[1], &t[2], t[0], NULL ) ||
+			vips_conv( t[1], &t[2], t[0], 
+				"precision", VIPS_PRECISION_INTEGER,
+				NULL ) ||
 			vips_project( t[2], &t[3], &t[4], NULL ) ||
 			vips_avg( t[3], &nolines, NULL ) )
 			return( -1 ); 
@@ -101,7 +103,9 @@ vips_countlines_build( VipsObject *object )
 	case VIPS_DIRECTION_VERTICAL:
 		if( !(t[0] = vips_image_new_matrixv( 2, 1, -1.0, 1.0 )) ||
 			vips_moreeq_const1( in, &t[1], 128, NULL ) ||
-			vips_conv( t[1], &t[2], t[0], NULL ) ||
+			vips_conv( t[1], &t[2], t[0], 
+				"precision", VIPS_PRECISION_INTEGER,
+				NULL ) ||
 			vips_project( t[2], &t[3], &t[4], NULL ) ||
 			vips_avg( t[4], &nolines, NULL ) )
 			return( -1 ); 
