@@ -4,10 +4,11 @@
   constant image
 - add new_from_image() to Python as well
 - slight change to cpp new_from_image() to match py/C behaviour
+- vips_conv(), vips_compass(), vips_convsep() default to FLOAT precision
 
 23/4/17 started 8.5.5
 - doc polishing
-- more improvements for tuncated PNG files, thanks juyunsang 
+- more improvements for truncated PNG files, thanks juyunsang 
 
 23/4/17 started 8.5.4
 - don't depend on image width when setting n_lines, thanks kleisauke
